src/components/menu/index.module.scss
@use '../../styles/mixins';

.menu {
    position: fixed;
    z-index: 1000;
    bottom: 30px;
    right: 30px;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    max-width: calc(100vw - 2em - 30px);

    @media screen and (max-width: 500px) {
        bottom: 1em;
        right: 1em;
        max-width: calc(100vw - 2em);
        width: 100%;
    }

    .main {
        background-color: rgba(black, 0.5);
        backdrop-filter: blur(2px);
        padding: var(--padding-medium);
        border-radius: var(--border-radius);
        max-width: min-content;
        @include mixins.center;
        justify-content: flex-start;

        @media screen and (max-width: 570px) {
            max-width: 100%;
            overflow-x: auto;
        }
    }

    .extended {
        background: var(--gradient-mesh), rgba(black, 0.5);
        backdrop-filter: blur(2px);
        padding: var(--padding-medium);
        border-radius: var(--border-radius);
        margin-bottom: 1em;
        max-height: min-content;
        overflow-y: auto;
        position: relative;

        @media screen and (max-width: 500px) {
            height: 300px;
            width: 100%;
        }

        .loader {
            max-height: 100%;
            @include mixins.center;
            flex-direction: column;
        }

        h4 {
            margin-top: 0;
            font-size: 1.1em;
            margin-bottom: 0.5em;
        }

        .indicator {
            $color: #ececec;

            color: $color;
            border-radius: var(--border-radius-less-round);
            display: flex;
            flex-direction: column;
            margin-bottom: 0.5em;
            opacity: 0.7;

            p {
                font-size: 0.8em;
                font-weight: 500;
                letter-spacing: 0.5px;
            }

            .icon {
                margin-left: 0.3em;
                font-size: 0.9em;
                transform: translateY(25%);
                color: $color;
            }
        }

        &::-webkit-scrollbar {
            width: 0;
            opacity: 0;
            display: none;
        }
    }
}

.icon {
    margin-left: 0.3em;
    font-size: 1.3em;
    color: var(--text-color-primary);
}

